--- a/app/index.html
+++ b/app/index.html
@@ -23,7 +23,7 @@
 
   <!-- Firebase -->
   <script src="//cdn.firebase.com/v0/firebase.js"></script>
-  <script src="https://cdn.firebase.com/v0/firebase-simple-login.js"></script>
+  <script src="//cdn.firebase.com/v0/firebase-simple-login.js"></script>
   <script src="//cdn.firebase.com/libs/angularfire/0.3.0/angularfire.min.js"></script>
 
   <!-- Screw Gyms app -->
