--- a/index.html
+++ b/index.html
@@ -22,16 +22,7 @@
     <!-- compiled CSS -->
 
     <!-- compiled JavaScript -->
-    <script type="text/javascript" src="vendor/angular/angular.js"></script>
-    <script type="text/javascript" src="vendor/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
-    <script type="text/javascript" src="vendor/angular-ui-router/release/angular-ui-router.js"></script>
-    <script type="text/javascript" src="vendor/angular-ui-utils/modules/route/route.js"></script>
-    <script type="text/javascript" src="src/app/about/about.js"></script>
-    <script type="text/javascript" src="src/app/app.js"></script>
-    <script type="text/javascript" src="src/app/home/home.js"></script>
-    <script type="text/javascript" src="src/common/plusOne/plusOne.js"></script>
-    <script type="text/javascript" src="templates-common.js"></script>
-    <script type="text/javascript" src="templates-app.js"></script>
+    <script type="text/javascript" src="assets/screwgyms-0.0.0.js"></script>
   </head>
   <body>
     <div class="container">
